OO-3827: remove the misleading "since" in course statistics